--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Compile
-        run: gcc -Wall -Werror addition.c test.c -o test
+        run: gcc -Wall -Werror addition.cpp test.cpp -o test
 
       - name: Run Tests
         run: ./test
