--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,3 +18,9 @@ jobs:
 
       - name: Run Tests
         run: ./test
+
+      - name: Upload binary
+        uses: actions/upload-artifact@v4
+        with:
+            name: test-binary
+            path: test
