--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,5 +25,5 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build and test Subtraction
         run: |
-          g++ Subtraction/sub_fun.cpp Subtraction/test_subtraction.cpp -o test_sub
+          g++ Subtraction/subfun.cpp Subtraction/test_subtraction.cpp -o test_sub
           ./test_sub
