--- a/.github/workflows/calculator.yml
+++ b/.github/workflows/calculator.yml
@@ -15,7 +15,7 @@ jobs:
 
     steps:
         - name: Code Checkout
-          uses: actions/chechout@v4
+          uses: actions/checkout@v4
 
 
         - name: Compile
