--- a/.github/workflows/calculator.yml
+++ b/.github/workflows/calculator.yml
@@ -26,7 +26,7 @@ jobs:
         - name: Upload Artifact
           uses: actions/upload-artifact@v4
           with:
-            name: calculator_binary
+            name: calculator_binary_${{matrix.os}}
             path: test
 
   Test:
@@ -42,7 +42,7 @@ jobs:
         - name: Downloading Artifact
           uses: actions/download-artifact@v4
           with:
-            name: calculator_binary
+            name: calculator_binary_${{matrix.os}}
             path: .
 
 
