Update yml for capture report line

--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -27,7 +27,8 @@ jobs:
               run: ./test
 
             - name: Capture coverage data
-              run: lcov --gcov-tool gcov --capture --directory . --output-file coverage.info
+              run: |
+                lcov --gcov-tool gcov --capture --directory . --output-file coverage.info
 
             - name: Generate HTML report
               run: genhtml coverage.info --output-directory coverage
