Update yml for lcov ignore errors mismatch

--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -28,7 +28,7 @@ jobs:
 
             - name: Capture coverage data
               run: |
-                lcov --gcov-tool gcov --capture --directory . --output-file coverage.info
+                lcov --capture --directory . --output-file coverage.info --ignore-errors mismatch
 
             - name: Generate HTML report
               run: genhtml coverage.info --output-directory coverage
