--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -19,6 +19,10 @@ jobs:
             - name: Install coverage tools
               run: sudo apt-get update && sudo apt-get install -y lcov
 
+            - name: Clean old coverage files
+              run: | 
+                find . -name "*.gcda" -o -name "*.gcno" | xargs rm -f
+
             - name: Compile with coverage file
               run: |
                 g++ --coverage Calculator/calculator.cpp Calculator/test_calculator.cpp -o test
@@ -28,7 +32,7 @@ jobs:
 
             - name: Capture coverage data
               run: |
-                lcov --capture --directory . --output-file coverage.info --ignore-errors mismatch
+                lcov --capture --directory . --output-file coverage.info --ignore-errors gcov
 
             - name: Generate HTML report
               run: genhtml coverage.info --output-directory coverage
